<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Porfolio">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="My Nanodegree Apps!"
        android:textSize="30sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/margin_button_layout"
        android:layout_marginLeft="@dimen/margin_button_layout"
        android:layout_marginEnd="@dimen/margin_button_layout"
        android:layout_marginRight="@dimen/margin_button_layout">
        <Button
            style="@style/AppTheme.ProjectButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spotify_streamer"
            android:id="@+id/spotify_streamer" />
        <Button
            style="@style/AppTheme.ProjectButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/super_duo"
            android:id="@+id/super_duo" />
        <Button
            style="@style/AppTheme.ProjectButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/built_it_bigger"
            android:id="@+id/built_it_bigger" />
        <Button
            style="@style/AppTheme.ProjectButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xyz_reader"
            android:id="@+id/xyz_reader" />
        <Button
            style="@style/AppTheme.ProjectButtonCapstone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capstone"
            android:id="@+id/capstone" />
    </LinearLayout>
</LinearLayout>
